<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.profesor.aplicaciones_de_muestra.UD3ACT6PasoDatosIntentAux"
    android:padding="10dp"
    android:id="@+id/relativeLayaout_main_frag_detalle">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_etiqueta_aux_nombre"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textSize="@dimen/valor_tamanio_mediano"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_nombre"
                android:hint="Escriba un nombre"
                android:textSize="@dimen/valor_tamanio_mediano"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:layout_column="1"
                android:layout_gravity="center"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_etiqueta_aux_apellido"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="@dimen/valor_tamanio_mediano"
                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_apellido"
                android:hint="Escriba un apellido"
                android:textSize="@dimen/valor_tamanio_mediano"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView"
                android:layout_gravity="center"
                android:layout_column="1"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_etiqueta_aux_ciclo"
                android:id="@+id/textView4"
                android:layout_gravity="center"
                android:textSize="@dimen/valor_tamanio_mediano"
                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_ciclo" />

        </TableRow>

    </TableLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tableLayout"
        android:id="@+id/radioGroup"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_radio_mujer"
            android:id="@+id/radioButton_mujer"
            android:checked="false"
            android:enabled="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_radio_hombre"
            android:id="@+id/radioButton_hombre"
            android:checked="false"
            android:enabled="false" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modificar"
            android:id="@+id/boton_modificar"
            android:layout_below="@+id/tableLayout"
            android:layout_centerHorizontal="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:id="@+id/boton_guardar"
            android:enabled="false" />
    </LinearLayout>

</RelativeLayout>
